test/types/file/freadIntFailed.good
freadIntFailed.chpl:5: error: halt reached - ***Error: Read failed: EOF***
